--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         </activity>
         <activity android:name=".exp1_gui" android:exported="true">
         </activity>
+        <activity android:name=".assignment_1_tl_checkin_checkout" android:exported="true">
+        </activity>
     </application>
 
 </manifest>
